@@ -41,27 +41,27 @@ DRIVERNV(starshot)      // 12/79 Star Shooter
 // --------------------
 // ALVIN G. AND CO.
 // --------------------
-DRIVERNV(agsoccer)      //A.G. Soccer (1992)
-//DRIVERNV(agfootbl)    //A.G. Football (1992)
-DRIVERNV(usafoota)      //U.S.A. Football R01u (1992)
-DRIVERNV(usafootb)      //U.S.A. Football R06u (1993)
-DRIVERNV(wrldtour)      //Al's Garage Band Goes On A World Tour (1993)
-DRIVERNV(wrldtou2)      //Al's Garage Band Goes On A World Tour R02b (1993)
-DRIVERNV(wrldtou3)      //Al's Garage Band Goes On A World Tour R06a (1993)
-DRIVERNV(dinoeggs)      //Dinosaur Eggs (1993)
-//DRIVERNV(dualpool)    //Dual Pool (1993) - 1 Unit
-//DRIVERNV(maxbadaz)    //Max Badazz (1993) - 1 Unit
-DRIVERNV(mystcast)      //Mystery Castle (1993)
-DRIVERNV(mystcasa)      //Mystery Castle (alternate set, 199?)
-DRIVERNV(pstlpkr)       //Pistol Poker R02 (1993)
-DRIVERNV(pstlpkr1)      //Pistol Poker R01 (1993)
-DRIVERNV(punchy)        //Punchy the Clown R02 (1993)
-DRIVERNV(punchy3)       //Punchy the Clown R03 (1993)
-                        //A-MAZE-ING Baseball (1994) - any units?
-//DRIVERNV(slamnjam)    //Slam N Jam (1994) - 2 Units
-
+DRIVERNV(agsocc07)      // AG01:   07/92  A.G. Soccer-Ball (R07u)
+DRIVERNV(agsoccer)      //         04/93  A.G. Soccer-Ball (R18u)
+DRIVERNV(agfoot07)      // AG01:   07/92  A.G. Football (R07u)
+DRIVERNV(agfootbl)      //         04/93  A.G. Football (R18u)
+DRIVERNV(wrldtou3)      // AG03:   02/93  Al's Garage Band Goes On a World Tour (R06a)
+DRIVERNV(wrldtou2)      //         02/93  Al's Garage Band Goes On a World Tour (R02b)
+DRIVERNV(wrldtour)      //         03/93  Al's Garage Band Goes On a World Tour (R01c)
+DRIVERNV(usafoota)      // AG05:   09/92  U.S.A. Football (R01u)
+DRIVERNV(usafootb)      //         02/93  U.S.A. Football (R06u)
+DRIVERNV(punchy)        // EPC061: 08/93  Punchy the Clown (R02)
+DRIVERNV(punchy3)       //         10/93  Punchy the Clown (R03)
+DRIVERNV(dinoeggs)      // EPC071: 09/93  Dinosaur Eggs (R02)
+DRIVERNV(mystcast)      // AG08:   06/93  Mystery Castle (R02)
+DRIVERNV(mystcasa)      // EPC081: ??/9?  Mystery Castle (R03)
+DRIVERNV(pstlpkr1)      // AG10:   11/93  Pistol Poker (R01)
+DRIVERNV(pstlpkr)       //         11/93  Pistol Poker (R02)
+                        //         ??/93  Dual-Pool - proto
+                        //         ??/93  Slam 'N Jam - proto
+                        //         ??/94  A-MAZE-ING Baseball - proto
 #ifdef MAME_DEBUG
-  DRIVERNV(test8031)    //Test 8031 cpu core
+DRIVERNV(test8031)      //Test 8031 cpu core
 #endif
 
 // --------------------
